syntax = "proto3";

package PostUserAuth;

option go_package = "./proto;PostUserAuth";

service PostUserAuth {
	rpc PostUserAuth(PostUserAuthRequest) returns (PostUserAuthResponse) {}

}

message PostUserAuthRequest {
	string real_name = 1;
	string id_card=2;
	string session_id=3;
}

message PostUserAuthResponse {
	string errno = 1;
	string err_msg=2;
}

